--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": ".eleventy.js",
     "scripts": {
         "dev": "cross-env ELEVENTY_ENV=development npx @11ty/eleventy --serve",
+        "stage": "cross-env ELEVENTY_ENV=staging npx @11ty/eleventy --serve",
         "build": "cross-env ELEVENTY_ENV=production npx @11ty/eleventy"
     },
     "keywords": [],
