--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "description": "My personal website store and connect ongoing learning and working process. Built more like a workbench than a portfolio.",
     "main": ".eleventy.js",
     "scripts": {
-        "dev": "concurrently \"cross-env ELEVENTY_ENV=development npx @11ty/eleventy --serve\" \"node scripts/watch-exploration-posts.js\"",
-        "stage": "concurrently \"cross-env ELEVENTY_ENV=staging npx @11ty/eleventy --serve\" \"node scripts/watch-exploration-posts.js\"",
+        "dev": "cross-env ELEVENTY_ENV=development npx @11ty/eleventy --serve",
+        "stage": "cross-env ELEVENTY_ENV=staging npx @11ty/eleventy --serve",
+        "posts": "node scripts/watch-exploration-posts.js",
         "build": "cross-env ELEVENTY_ENV=production npx @11ty/eleventy"
     },
     "keywords": [],
@@ -13,7 +14,6 @@
     "license": "ISC",
     "devDependencies": {
         "@11ty/eleventy": "^3.1.2",
-        "concurrently": "^9.2.0",
         "cross-env": "^10.0.0"
     },
     "dependencies": {
