task: update github action for html and link validation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,13 @@ jobs:
 
             - name: Build site
               run: npm run build
+
+            - name: HTML validation
+              run: npx html-validate "output/**/*.html"
+
+            - name: Check broken links
+              uses: lycheeverse/lychee-action@v1
+              with:
+                  urls: './output'
+                  github_token: ${{secrets.GITHUB_TOKEN}}
+                  ignore: '.*\.md$'
