--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "@eslint/js": "^9.35.0",
         "cross-env": "^10.0.0",
         "eslint": "^9.35.0",
-        "globals": "^16.4.0"
+        "globals": "^16.4.0",
+        "prettier": "^3.6.2"
     },
     "dependencies": {
         "chokidar": "^3.6.0",
