--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "prettier": "^3.6.2"
     },
     "dependencies": {
+        "@photogabble/eleventy-plugin-interlinker": "^1.1.0",
         "chokidar": "^3.6.0",
         "js-yaml": "^4.1.0"
     }
